--- a/index.html
+++ b/index.html
@@ -57,9 +57,15 @@
         <h2>Projects</h2>
         <div class="project">
             <h3>The Pet Palace</h3>
-            <a href="https://daytonbraison.pythonanywhere.com" target="_blank">Live Website</a>
+            <a href="https://thepetpalace-daytonbraison.pythonanywhere.com" target="_blank">Live Website</a>
             <br>
             <a href="https://github.com/dayton-braison/the-pet-palace" target="_blank">Code</a>
+        </div>
+        <div class="project">
+            <h3>Amor Dating Site Landing Page</h3>
+            <a href="https://amor-dating-daytonbraison.pythonanywhere.com" target="_blank">Live Website</a>
+            <br>
+            <a href="https://github.com/dayton-braison/amor-dating" target="_blank">Code</a>
         </div>
         <div class="project">
             <h3>Mindset Masterclass Web Page</h3>
