Added digital resume

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <ul>
             <li><a href="#about">About</a></li>
             <li><a href="#projects">Projects</a></li>
+            <li><a href="https://daytonbraison-digital-resume.netlify.app/">Resume</a></li>
         </ul>
     </nav>
     <header class="hero">
@@ -47,7 +48,7 @@
     
     <section id="about">
         <h2>About Me</h2>
-        <p class="about-content container-sm">Hey! I'm Dayton, a Web Developer with a passion for crafting web experiences and apps. Born and raised in Mississippi, I'm currently residing in Austin, TX.
+        <p class="about-content container-sm">Hey! I'm Dayton, a Software Developer with a passion for crafting web experiences and apps. Born and raised in Mississippi, I'm currently residing in Austin, TX.
         <br> 
         <br> 
         Driven by an unquenchable thirst for knowledge and a love of tackling new challenges, I'm a firm believer in lifelong learning and continuous improvement. When I'm not in front of a screen, you can find me at the gym, at home cooking, or just out exploring Austin with my wife.</p>
@@ -68,7 +69,7 @@
             <a href="https://github.com/dayton-braison/amor-dating" target="_blank">Code</a>
         </div>
         <div class="project">
-            <h3>Mindset Masterclass Web Page</h3>
+            <h3>Mindset Masterclass Landing Page</h3>
             <a href="https://dayton-braison.github.io/mindset-masterclass/" target="_blank">Live Website</a>
             <br>
             <a href="https://github.com/dayton-braison/mindset-masterclass" target="_blank">Code</a>
